# astranyx

./: .gitignore  CLAUDE.md  CONDUCT_OF_CODE  CONTRIBUTOR_AGREEMENT  LICENSE  LICENSE_ASSETS  LICENSE_CODE  LICENSE_FONTS  README.md  TODO-IDEAS.md  TODO.md  docker-compose.yml
.claude/: settings.json  settings.local.json
.claude/commands/: assess-deep.md  assess-last.md  assess-staged.md  assess.md  feature.md  harden-tests.md  harden.md  lint.md  lore-context.md  lore.md  refactor.md  test.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
astranyx-fps-v2/: Cargo.toml  README.md  TODO.md
astranyx-fps-v2/crates/game/: Cargo.toml
astranyx-fps-v2/crates/game/src/: input.rs  level.rs  lib.rs  player.rs  simulation.rs
astranyx-fps-v2/crates/physics/: Cargo.toml
astranyx-fps-v2/crates/physics/src/: lib.rs
astranyx-fps-v2/crates/physics/src/collision/: flags.rs  mod.rs  trace.rs  world.rs
astranyx-fps-v2/crates/physics/src/movement/: config.rs  controller.rs  jump.rs  mod.rs  slide_move.rs  stance.rs  state.rs
astranyx-fps-v2/crates/renderer/: Cargo.toml
astranyx-fps-v2/crates/renderer/src/: camera.rs  lib.rs
astranyx-fps-v2/docs/: controls.md
astranyx-fps-v2/lore/: 20260112-0844-fps-v2-engine-rewrite.md  20260112-0915-stance-control-scheme.md  20260112-0936-stance-state-machine.md
astranyx-fps-v2/src/: main.rs
astranyx-fps/crates/core/: Cargo.toml
astranyx-fps/crates/core/src/: entities.rs  lib.rs  path.rs  physics.rs  simulation.rs
astranyx-fps/crates/core/src/level/: camera.rs  mesh.rs  mod.rs  segment.rs  test_level.rs
astranyx-fps/crates/core/src/scripting/: mod.rs
astranyx-fps/crates/core/src/simulation/fps/: collision.rs  mod.rs  movement.rs  pmove.rs  sound.rs  stealth.rs
astranyx-rs/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
astranyx-rs/.cargo/: config.toml
astranyx-rs/crates/client/: Cargo.toml
astranyx-rs/crates/client/src/: app.rs  effects.rs  game.rs  lib.rs  main.rs  wasm.rs
astranyx-rs/crates/client/src/hud/: debug.rs  mod.rs  native.rs
astranyx-rs/crates/client/src/input/: mod.rs
astranyx-rs/crates/client/src/network/: mod.rs
astranyx-rs/crates/client/src/renderer/: camera.rs  gltf_loader.rs  level_generator.rs  mesh.rs  meshes.rs  mod.rs  phong_pipeline.rs  pipeline.rs  vertex.rs
astranyx-rs/crates/client/src/renderer/shaders/: phong.wgsl
astranyx-rs/crates/core/: Cargo.toml
astranyx-rs/crates/core/src/: entities.rs  input.rs  lib.rs  math.rs  physics.rs  random.rs  simulation.rs
astranyx-rs/crates/core/src/level/: mod.rs  route.rs  segment.rs
astranyx-rs/crates/core/src/scripting/: mod.rs
astranyx-rs/crates/core/src/simulation/: shmup.rs
astranyx-rs/crates/core/src/simulation/fps/: alert.rs  collision.rs  mod.rs  movement.rs  vision.rs
astranyx-rs/crates/protocol/: Cargo.toml
astranyx-rs/crates/protocol/src/: lib.rs  messages.rs
astranyx-rs/lore/: 20260110-0658-segment-transitions-fps-mode.md  20260110-1124-three-d-migration.md  20260111-1150-gltf-level-mesh-implementation.md  20260111-1813-collision-system-architecture.md
astranyx-rs/scripts/bosses/: 0_classic.rhai  4_wall.rhai  5_final.rhai
astranyx-rs/scripts/enemies/: carrier.rhai  shield.rhai  shooter.rhai  sniper.rhai  speeder.rhai  swerver.rhai
astranyx-rs/scripts/worlds/01_station/: world.rhai
astranyx-rs/scripts/worlds/01_station/segments/: 3_hangar.rhai  4_base.rhai
astranyx-rs/web/: bootstrap.js  index.html
client/: .dockerignore  Dockerfile  Dockerfile.dev  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: binary-protocol.md  deployment.md  synchronization.md
legacy/: chromatic_collapse.html  delta-v.html  orbit.html
lore/: 20251230-0226-project-setup.md  20251230-0237-server-setup.md  20251230-0248-p2p-lockstep.md  20251230-0253-environment-setup-complete.md  20251230-0307-delta-v-game-logic-port.md  20251230-0439-hud-refactor-assessment.md  20251230-1933-weapon-system.md  20251230-1934-canvas-hud.md  20251230-2100-code-splitting-boot-loader.md  20251230-2114-class-extraction-refactor.md  20251231-0331-entity-extraction.md  20251231-0343-threejs-webgpu-migration-plan.md  20251231-0446-comprehensive-test-coverage.md  20251231-0504-multiplayer-lobby-webrtc.md  20251231-0515-harden-multiplayer.md  20251231-0629-hybrid-lockstep-events-design.md  20251231-0808-state-sync.md  20251231-1045-lockstep-refactor-plan.md  20251231-1200-lockstep-refactor-complete.md  20251231-1215-harden-assessment.md  20251231-2322-harden-assessment-2.md  20260101-0140-tla-implementation-alignment.md  20260101-0215-tla-implementation-alignment.md  20260101-0315-tla-model-comparison.md  20260101-0411-tla-model-improvements.md  20260101-0450-tla-assessment-and-fixes.md  20260101-0543-tla-invariant-fixes.md  20260101-0629-tla-two-leaders-bug-fix.md  20260101-0632-why-leader-election.md  20260101-0649-tla-invariants-hardening.md  20260101-0800-tla-comprehensive-assessment.md  20260101-0930-tla-harden-assessment.md  20260101-1030-tla-model-analysis.md  20260101-1647-tla-model-analysis.md  20260102-2233-lobby-player-name-and-input-fix.md  20260103-0531-sc2-lockstep-optimizations.md  20260109-1003-rust-wasm-rewrite-plan.md  20260109-1158-rust-wasm-scaffold-complete.md  20260109-1229-rust-wasm-ci-and-fixes.md  20260109-1545-rust-rendering-port.md  (+8 more)
server/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  mix.exs  package.json
tla/: .gitignore  .tlc_passed  App.tla  LeaderElection.tla  LockstepCore.tla  LockstepFinal.tla  LockstepFull.tla  LockstepMessageLoss.tla  LockstepNetcode.tla  LockstepNetcodeV2.tla  LockstepNetwork.tla  LockstepSimple.tla  LockstepState.tla  LockstepSync.tla  MCApp.cfg  MCLeaderElection.cfg  MCLeaderElection.tla  MCLockstepCore.cfg  MCLockstepFinal.cfg  MCLockstepMessageLoss.cfg  MCLockstepMessageLoss.tla  MCLockstepNetcode.cfg  MCLockstepNetcodeV2.cfg  MCLockstepNetwork.cfg  MCLockstepNetwork.tla  MCLockstepSimple.cfg  MCLockstepSimple.tla  MCLockstepState.cfg  MCLockstepState.tla  MCLockstepSync.cfg  run-tlc.sh  run_tlc.sh
(+207 files in other folders)
