[package]
name = "astranyx"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "astranyx"
path = "src/main.rs"

[dependencies]
astranyx-game = { path = "crates/game" }
astranyx-physics = { path = "crates/physics" }
astranyx-renderer = { path = "crates/renderer" }
three-d = "0.18"
image = "0.25"
glam = { version = "0.30", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

[workspace]
resolver = "2"
members = [
    "crates/game",
    "crates/physics",
    "crates/renderer",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.92"

[workspace.dependencies]
# Math
glam = { version = "0.30", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0"

# Scripting
rhai = { version = "1.22", features = ["sync", "f32_float"] }

# Collision (convex hulls, boxes)
parry3d = "0.18"

# Rendering
three-d = "0.18"
three-d-asset = "0.7"

# Utilities
log = "0.4"
env_logger = "0.11"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 1
