[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/your-username/astranyx"

[workspace.dependencies]
# Internal crates
astranyx-core = { path = "crates/core" }
astranyx-protocol = { path = "crates/protocol" }

# Graphics
wgpu = "24"
winit = "0.30"

# Math
glam = { version = "0.29", features = ["bytemuck", "serde"] }
bytemuck = { version = "1.21", features = ["derive"] }

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"

# Serialization
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

# Async
pollster = "0.4"  # Block on futures (native)

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-wasm = "0.2"

# RNG (deterministic)
rand = "0.8"
rand_chacha = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

[profile.release]
lto = true
opt-level = 3

[profile.release-wasm]
inherits = "release"
opt-level = "s"  # Optimize for size
