[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[workspace.dependencies]
# Internal crates
astranyx-core = { path = "crates/core" }
astranyx-protocol = { path = "crates/protocol" }

# Rendering
three-d = "0.18"

# ECS
hecs = "0.10"

# Math
glam = { version = "0.29", features = ["bytemuck", "serde"] }
bytemuck = { version = "1.21", features = ["derive"] }

# Serialization
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

# Scripting
rhai = { version = "1.21", features = ["sync"] }

# RNG (deterministic)
rand = "0.8"
rand_chacha = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

[profile.release]
lto = true
opt-level = 3
