[package]
name = "astranyx-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Astranyx game client"

[[bin]]
name = "astranyx"
path = "src/main.rs"

[lib]
name = "astranyx_client"
path = "src/lib.rs"

[features]
default = ["native"]
native = []
wasm = ["dep:wasm-bindgen", "dep:console_error_panic_hook", "dep:tracing-wasm", "dep:web-sys"]

[dependencies]
astranyx-core.workspace = true

# Rendering (three-d includes winit and wgpu)
three-d = "0.18"

# Math
glam.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true

# WASM-specific
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
tracing-wasm = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Window", "Document", "HtmlCanvasElement"] }
